--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
     <head>
       <title>Checkers, a game.</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </head>
     <body>
-      <h1>Checkers, a game.</h1>
       <div class="board">
-        <div id="0,0" class="block"></div>
+      <h1>Checkers, a game.</h1>
+        <div id="0,0" class="block"><div id="piece"></div></div>
         <div id="0,1" class="block"></div>
         <div id="0,2" class="block"></div>
         <div id="0,3" class="block"></div>
