--- a/index.html
+++ b/index.html
@@ -7,70 +7,70 @@
     <body>
       <div class="board">
       <h1>Checkers, a game.</h1>
-        <div id="0,0" class="square"><div id="piece"></div></div>
-        <div id="0,1" class="square"></div>
-        <div id="0,2" class="square"></div>
-        <div id="0,3" class="square"></div>
-        <div id="0,4" class="square"></div>
-        <div id="0,5" class="square"></div>
-        <div id="0,6" class="square"></div>
-        <div id="0,7" class="square"></div>
-        <div id="1,0" class="square"></div>
-        <div id="1,1" class="square"></div>
-        <div id="1,2" class="square"></div>
-        <div id="1,3" class="square"></div>
-        <div id="1,4" class="square"></div>
-        <div id="1,5" class="square"></div>
-        <div id="1,6" class="square"></div>
-        <div id="1,7" class="square"></div>
-        <div id="2,0" class="square"></div>
-        <div id="2,1" class="square"></div>
-        <div id="2,2" class="square"></div>
-        <div id="2,3" class="square"></div>
-        <div id="2,4" class="square"></div>
-        <div id="2,5" class="square"></div>
-        <div id="2,6" class="square"></div>
-        <div id="2,7" class="square"></div>
-        <div id="3,0" class="square"></div>
-        <div id="3,1" class="square"></div>
-        <div id="3,2" class="square"></div>
-        <div id="3,3" class="square"></div>
-        <div id="3,4" class="square"></div>
-        <div id="3,5" class="square"></div>
-        <div id="3,6" class="square"></div>
-        <div id="3,7" class="square"></div>
-        <div id="4,0" class="square"></div>
-        <div id="4,1" class="square"></div>
-        <div id="4,2" class="square"></div>
-        <div id="4,3" class="square"></div>
-        <div id="4,4" class="square"></div>
-        <div id="4,5" class="square"></div>
-        <div id="4,6" class="square"></div>
-        <div id="4,7" class="square"></div>
-        <div id="5,0" class="square"></div>
-        <div id="5,1" class="square"></div>
-        <div id="5,2" class="square"></div>
-        <div id="5,3" class="square"></div>
-        <div id="5,4" class="square"></div>
-        <div id="5,5" class="square"></div>
-        <div id="5,6" class="square"></div>
-        <div id="5,7" class="square"></div>
-        <div id="6,0" class="square"></div>
-        <div id="6,1" class="square"></div>
-        <div id="6,2" class="square"></div>
-        <div id="6,3" class="square"></div>
-        <div id="6,4" class="square"></div>
-        <div id="6,5" class="square"></div>
-        <div id="6,6" class="square"></div>
-        <div id="6,7" class="square"></div>
-        <div id="7,0" class="square"></div>
-        <div id="7,1" class="square"></div>
-        <div id="7,2" class="square"></div>
-        <div id="7,3" class="square"></div>
-        <div id="7,4" class="square"></div>
-        <div id="7,5" class="square"></div>
-        <div id="7,6" class="square"></div>
-        <div id="7,7" class="square"></div>
+        <div id="0-0" class="square"></div>
+        <div id="0-1" class="square"></div>
+        <div id="0-2" class="square"></div>
+        <div id="0-3" class="square"></div>
+        <div id="0-4" class="square"></div>
+        <div id="0-5" class="square"></div>
+        <div id="0-6" class="square"></div>
+        <div id="0-7" class="square"></div>
+        <div id="1-0" class="square"></div>
+        <div id="1-1" class="square"></div>
+        <div id="1-2" class="square"></div>
+        <div id="1-3" class="square"></div>
+        <div id="1-4" class="square"></div>
+        <div id="1-5" class="square"></div>
+        <div id="1-6" class="square"></div>
+        <div id="1-7" class="square"></div>
+        <div id="2-0" class="square"></div>
+        <div id="2-1" class="square"></div>
+        <div id="2-2" class="square"></div>
+        <div id="2-3" class="square"></div>
+        <div id="2-4" class="square"></div>
+        <div id="2-5" class="square"></div>
+        <div id="2-6" class="square"></div>
+        <div id="2-7" class="square"></div>
+        <div id="3-0" class="square"></div>
+        <div id="3-1" class="square"></div>
+        <div id="3-2" class="square"></div>
+        <div id="3-3" class="square"></div>
+        <div id="3-4" class="square"></div>
+        <div id="3-5" class="square"></div>
+        <div id="3-6" class="square"></div>
+        <div id="3-7" class="square"></div>
+        <div id="4-0" class="square"></div>
+        <div id="4-1" class="square"></div>
+        <div id="4-2" class="square"></div>
+        <div id="4-3" class="square"></div>
+        <div id="4-4" class="square"></div>
+        <div id="4-5" class="square"></div>
+        <div id="4-6" class="square"></div>
+        <div id="4-7" class="square"></div>
+        <div id="5-0" class="square"></div>
+        <div id="5-1" class="square"></div>
+        <div id="5-2" class="square"></div>
+        <div id="5-3" class="square"></div>
+        <div id="5-4" class="square"></div>
+        <div id="5-5" class="square"></div>
+        <div id="5-6" class="square"></div>
+        <div id="5-7" class="square"></div>
+        <div id="6-0" class="square"></div>
+        <div id="6-1" class="square"></div>
+        <div id="6-2" class="square"></div>
+        <div id="6-3" class="square"></div>
+        <div id="6-4" class="square"></div>
+        <div id="6-5" class="square"></div>
+        <div id="6-6" class="square"></div>
+        <div id="6-7" class="square"></div>
+        <div id="7-0" class="square"></div>
+        <div id="7-1" class="square"></div>
+        <div id="7-2" class="square"></div>
+        <div id="7-3" class="square"></div>
+        <div id="7-4" class="square"></div>
+        <div id="7-5" class="square"></div>
+        <div id="7-6" class="square"></div>
+        <div id="7-7" class="square"></div>
       </div>
       <script src='js/main.js'></script>
     </body>
