made some major revamps to my approach, changed methods slightly. need to fix moveSelectedPiece method.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <div id="7-6" class="square"></div>
         <div id="7-7" class="square"></div>
       </div>
+
+      <div id="set-board"><h2>Set Up Game</h2></div>
+
       <script src='js/main.js'></script>
     </body>
   </html>
