a few stylistic changes, added css, added a current player display.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <div class="board">
     <h1>Checkers, a game.</h1>
+
+    <div id="current-player">
+      <h3>Current Player: B</h3>
+    </div>
+
     <div id="0-0" class="square dark"></div>
     <div id="0-1" class="square light"></div>
     <div id="0-2" class="square dark"></div>
