--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h2>Clear The Game</h2>
     </div>
   </section>
-  <script src='js/main.js'></script>
+  <script src='js/main2.js'></script>
 </body>
 
 </html>
